Added actual project links

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             />
             <div class="project-links">
               <a
-              href="https://github.com/dfhalimi/movie-app"
+              href="https://github.com/dfhalimi/portfolio"
               target="_blank"
               class="btn"
               >Zum Code</a
@@ -165,7 +165,7 @@
               class="btn"
               >Zum Code</a
             >
-            <a href="https://www.youtube.com/" target="_blank" class="btn"
+            <a href="https://deniz-halimi-movie-app.netlify.app/home" target="_blank" class="btn"
               >Zur Website</a
             >
             </div>
@@ -204,7 +204,7 @@
               class="btn"
               >Zum Code</a
             >
-            <a href="https://www.youtube.com/" target="_blank" class="btn"
+            <a href="https://space-roamer.netlify.app" target="_blank" class="btn"
               >Zur Website</a
             >
             </div>
@@ -238,12 +238,12 @@
             />
             <div class="project-links">
               <a
-              href="https://github.com/dfhalimi/strong-fitness"
+              href="https://github.com/dfhalimi/fitness-website"
               target="_blank"
               class="btn"
               >Zum Code</a
             >
-            <a href="https://www.youtube.com/" target="_blank" class="btn"
+            <a href="https://strong-fitness.netlify.app" target="_blank" class="btn"
               >Zur Website</a
             >
             </div>
