Added descriptions to the projects

--- a/index.html
+++ b/index.html
@@ -136,16 +136,15 @@
             <hr>
             <h3>Beschreibung</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus
-              consectetur provident quod ab repudiandae hic tempore, quam
-              repellat, corporis sit officia. Quas mollitia architecto ipsum rem
-              aperiam eos provident iusto?
+              Diese Seite habe ich mit HTML, CSS, SCSS und ein wenig JavaScript erstellt.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus
-              consectetur provident quod ab repudiandae hic tempore, quam
-              repellat, corporis sit officia. Quas mollitia architecto ipsum rem
-              aperiam eos provident iusto?
+              Ich hatte viel Spaß beim Erstellen dieser Seite. <br>
+              Einen Ort zu haben, an dem meine Projekte für andere Menschen zugänglich sind, ist ein großartiges Gefühl.
+            </p>
+            <p>
+              Kaum habe ich diese Seite fertig, bin ich schon in Gedanken bei meinem nächsten Projekt. <br>
+              Es wird sehr spannend für mich sein, zu sehen wie weit ich mich in ein paar Monaten entwickelt habe.
             </p>
             <h3>Skills</h3>
             <p><span>HTML5</span><span>CSS3</span><span>SCSS</span><span>JavaScript</span></p>
@@ -175,16 +174,11 @@
             <hr>
             <h3>Beschreibung</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus
-              consectetur provident quod ab repudiandae hic tempore, quam
-              repellat, corporis sit officia. Quas mollitia architecto ipsum rem
-              aperiam eos provident iusto?
+              Auf dieser Seite kann man Informationen zu so gut wie allen Filmen finden. <br>
+              Sie beinhaltet eine Suchfunktion, verschiedene Listen wie zum Beispiel beliebte Filme, oder Neuerscheinungen, und auch zu jedem Film eine Übersicht der Schauspieler, Trailer und Bewertungen.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus
-              consectetur provident quod ab repudiandae hic tempore, quam
-              repellat, corporis sit officia. Quas mollitia architecto ipsum rem
-              aperiam eos provident iusto?
+              Der Fokus lag hierbei, den Umgang mit React anhand eines Praxisbeispiels zu erlernen und auch meine Fähigkeiten im Arbeiten mit APIs zu vertiefen.
             </p>
             <h3>Skills</h3>
             <p><span>HTML5</span><span>CSS3</span><span>React.js</span><span>React Router</span><span>JavaScript</span><span>TMBD API</span></p>
@@ -214,16 +208,10 @@
             <hr>
             <h3>Beschreibung</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus
-              consectetur provident quod ab repudiandae hic tempore, quam
-              repellat, corporis sit officia. Quas mollitia architecto ipsum rem
-              aperiam eos provident iusto?
+              Hier kann man Karten vom Mond, Mars und Vesta 4 erkunden und sich die täglichen Beiträge von NASA ansehen.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus
-              consectetur provident quod ab repudiandae hic tempore, quam
-              repellat, corporis sit officia. Quas mollitia architecto ipsum rem
-              aperiam eos provident iusto?
+              Der Fokus bei diesem Projekt war es den Umgang mit APIs zu lernen. Hierfür habe ich die NASA API und die ESRI API genutzt.
             </p>
             <h3>Skills</h3>
             <p><span>HTML5</span><span>CSS3</span><span>JavaScript</span><span>NASA API</span><span>ESRI API</span></p>
@@ -253,16 +241,10 @@
             <hr>
             <h3>Beschreibung</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus
-              consectetur provident quod ab repudiandae hic tempore, quam
-              repellat, corporis sit officia. Quas mollitia architecto ipsum rem
-              aperiam eos provident iusto?
+              Eine simple Landing Page für ein Fitnessstudio.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus
-              consectetur provident quod ab repudiandae hic tempore, quam
-              repellat, corporis sit officia. Quas mollitia architecto ipsum rem
-              aperiam eos provident iusto?
+              Der Fokus bei diesem Projekt war hauptsächlich den Umgang mit SASS in einem Praxisbeispiel zu erlernen und desweiteren zuvor gelernte Inhalte zum Thema Web Design anzuwenden.
             </p>
             <h3>Skills</h3>
             <p><span>HTML5</span><span>CSS3</span><span>SCSS</span><span>JavaScript</span></p>
