Optimized for very small devices

--- a/index.html
+++ b/index.html
@@ -142,12 +142,8 @@
               Ich hatte viel Spaß beim Erstellen dieser Seite. <br>
               Einen Ort zu haben, an dem meine Projekte für andere Menschen zugänglich sind, ist ein großartiges Gefühl.
             </p>
-            <p>
-              Kaum habe ich diese Seite fertig, bin ich schon in Gedanken bei meinem nächsten Projekt. <br>
-              Es wird sehr spannend für mich sein, zu sehen wie weit ich mich in ein paar Monaten entwickelt habe.
-            </p>
             <h3>Skills</h3>
-            <p><span>HTML5</span><span>CSS3</span><span>SCSS</span><span>JavaScript</span></p>
+            <p class="skills"><span>HTML5</span><span>SCSS</span><span>JavaScript</span></p>
           </div>
           <span id="close" onclick="closeProject()">X</span>
         </div>
@@ -175,13 +171,13 @@
             <h3>Beschreibung</h3>
             <p>
               Auf dieser Seite kann man Informationen zu so gut wie allen Filmen finden. <br>
-              Sie beinhaltet eine Suchfunktion, verschiedene Listen wie zum Beispiel beliebte Filme, oder Neuerscheinungen, und auch zu jedem Film eine Übersicht der Schauspieler, Trailer und Bewertungen.
+              Sie beinhaltet eine Suchfunktion, verschiedene Filmlisten, und auch eine generelle Übersicht zu jedem Film.
             </p>
             <p>
-              Der Fokus lag hierbei, den Umgang mit React anhand eines Praxisbeispiels zu erlernen und auch meine Fähigkeiten im Arbeiten mit APIs zu vertiefen.
+              Der Fokus lag hierbei, den Umgang mit React anhand eines Praxisbeispiels zu erlernen.
             </p>
             <h3>Skills</h3>
-            <p><span>HTML5</span><span>CSS3</span><span>React.js</span><span>React Router</span><span>JavaScript</span><span>TMBD API</span></p>
+            <p class="skills"><span>HTML5</span><span>CSS3</span><span>React.js</span><span>React Router</span><span>JavaScript</span></p>
           </div>
           <span id="close" onclick="closeProject()">X</span>
         </div>
@@ -214,7 +210,7 @@
               Der Fokus bei diesem Projekt war es den Umgang mit APIs zu lernen. Hierfür habe ich die NASA API und die ESRI API genutzt.
             </p>
             <h3>Skills</h3>
-            <p><span>HTML5</span><span>CSS3</span><span>JavaScript</span><span>NASA API</span><span>ESRI API</span></p>
+            <p class="skills"><span>HTML5</span><span>CSS3</span><span>JavaScript</span><span>NASA API</span><span>ESRI API</span></p>
           </div>
           <span id="close" onclick="closeProject()">X</span>
         </div>
@@ -247,7 +243,7 @@
               Der Fokus bei diesem Projekt war hauptsächlich den Umgang mit SASS in einem Praxisbeispiel zu erlernen und desweiteren zuvor gelernte Inhalte zum Thema Web Design anzuwenden.
             </p>
             <h3>Skills</h3>
-            <p><span>HTML5</span><span>CSS3</span><span>SCSS</span><span>JavaScript</span></p>
+            <p class="skills"><span>HTML5</span><span>CSS3</span><span>SCSS</span><span>JavaScript</span></p>
           </div>
           <span id="close" onclick="closeProject()">X</span>
         </div>
